Fixed visibility

--- a/src/components/HomeList.module.css
+++ b/src/components/HomeList.module.css
@@ -2,4 +2,7 @@
     margin-top: 27px;
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 30px;
+    padding-bottom: 64px;
 }
